Fix table layout issues

--- a/corehq/apps/style/static/style/less/_hq/report.less
+++ b/corehq/apps/style/static/style/less/_hq/report.less
@@ -37,6 +37,11 @@
     .opacity(0.8);
 }
 
+.property-name-display {
+  text-overflow: ellipsis;
+  overflow-x: hidden;
+}
+
 .ucr-preview-container {
   overflow-x: scroll;
   background-color: white;
