--- a/corehq/apps/style/static/style/less/_hq/tables.less
+++ b/corehq/apps/style/static/style/less/_hq/tables.less
@@ -11,6 +11,9 @@
 }
 
 .table-editprops {
+
+  table-layout: fixed;
+
   .select2-container {
     width: 100% !important;
   }
